# tracer

./: .gitignore  CMakeLists.txt  readme.md
application/: CMakeLists.txt  application.cpp
framework/: CMakeLists.txt
framework/materials/: CMakeLists.txt
framework/materials/include/: material.h  surface_info.h
framework/materials/src/: material.cpp
framework/math/: CMakeLists.txt
framework/math/include/: interval.h  interval.inl  random_generator.h  ray.h  ray.inl  tracer_math.h
framework/math/src/: interval.cpp
framework/math/test/: CMakeLists.txt  test_interval.cpp
framework/sampling/: CMakeLists.txt
framework/sampling/include/: image_sample.h  isampler.h  sample_container.h  stochastic_sampler.h
framework/sampling/src/: stochastic_sampler.cpp
framework/sampling/test/: CMakeLists.txt  test_sample_container.cpp
framework/scene/: CMakeLists.txt
framework/scene/include/: hit_result.h  node.h  node_type.h  scene.h
framework/scene/src/: node.cpp  scene.cpp
framework/scene/test/: CMakeLists.txt  test_node.cpp  test_scene.cpp
test/: CMakeLists.txt
